--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@mui/material": "^5.0.6",
     "bootstrap": "^4.4.1",
+    "firebase": "^9.2.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "react": "^17.0.2",
