--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
   "license": "BSD",
   "dependencies": {
     "@babel/core": "^7.0.0-0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@mui/material": "^5.0.6",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
     "bootstrap": "^4.4.1",
     "firebase": "^9.2.0",
     "jquery": "^3.4.1",
@@ -41,10 +42,12 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.1.2",
+    "react-responsive-gallery": "^2.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.5.5"
   }
 }
