--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@babel/core": "^7.0.0-0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/open-sans": "^4.5.3",
+    "@fontsource/quicksand": "^4.5.2",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
@@ -42,7 +44,6 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.0",
     "react-redux": "^7.2.6",
-    "react-responsive-gallery": "^2.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
