--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
     "bootstrap": "^4.4.1",
+    "core-js": "^3.21.0",
     "firebase": "^9.2.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "react": "^17.0.2",
+    "react-app-polyfill": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-intl": "^5.21.0",
     "react-redux": "^7.2.6",
