--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.4.1",
     "core-js": "^3.21.0",
     "firebase": "^9.2.0",
