--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "scroll-lock": "^2.1.5",
     "typescript": "^4.5.5"
   }
 }
