--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "core-js": "^3.21.0",
     "firebase": "^9.2.0",
     "jquery": "^3.4.1",
+    "node": "^20.6.0",
     "popper.js": "^1.16.0",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
