--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -29,7 +29,6 @@
   "license": "BSD",
   "dependencies": {
     "@babel/core": "^7.0.0-0",
-    "@babel/helper-environment-visitor": "^7.22.5",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/open-sans": "^4.5.3",
@@ -55,7 +54,6 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "scroll-lock": "^2.1.5",
-    "typescript": "^4.5.5",
-    "webpack": "4.41.2"
+    "typescript": "^4.5.5"
   }
 }
